--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -9,6 +9,6 @@
         android:textSize="30sp"
         android:layout_marginTop="40sp"
         android:layout_centerHorizontal="true"
-        android:fontFamily="@font/Roboto-Light"
+        android:fontFamily="@font/roboto_light"
         android:text="Книги в корзине"/>
 </RelativeLayout>
