--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -10,5 +10,5 @@
         android:layout_marginTop="40sp"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/roboto_light"
-        android:text="Список категорий"/>
+        android:text="Популярные книги"/>
 </RelativeLayout>
