--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -17,7 +17,8 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed"/>
+            app:tabMode="fixed"
+            app:tabBackground="@color/material_drawer_dark_selected"/>
     </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
