--- a/app/src/main/res/layout/fragment_genre_item.xml
+++ b/app/src/main/res/layout/fragment_genre_item.xml
@@ -7,11 +7,19 @@
     android:orientation="vertical">
     <ImageView
         android:id="@+id/genre_icon"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content" />
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"/>
     <TextView
         android:id="@+id/genre_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/genre_icon"/>
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@id/genre_icon"
+        android:gravity="center"
+        android:textSize="14sp"
+        android:fontFamily="@font/roboto_light"
+        android:textColor="@color/material_drawer_dark_primary_text"/>
 </RelativeLayout>
