--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         android:id="@+id/drawer_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_container">
+        android:layout_below="@id/toolbar_container"
+        android:layout_above="@id/navigation">
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
