--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -5,11 +5,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/about_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_marginTop="40sp"
+        android:textSize="14sp"
+        android:layout_margin="10sp"
         android:layout_centerHorizontal="true"
+        android:scrollbars="vertical"
         android:fontFamily="@font/roboto_light"
-        android:text="О приложении"/>
+        android:text="DokiDoki - официальный интернет-магазин издательств ЭКСМО, МИФ, Вентана-Граф, Дрофа и АСТ, а также их импринтов Like Book, fanzon, ГрандМастер, Песочные часы, Corpus и др.\n
+На нашем сайте вы можете купить книги всех жанров и тематик. DokiDoki - ваш проводник в мир книг!\n
+\n
+Book24.ru – это свыше 50 тысяч наименований товаров, выгодные цены, интересные акции и эксклюзивные предложения для самых взыскательных покупателей. Участие в нашей Программе лояльности позволяет накапливать бонусные баллы и экономить на покупках, Корпоративная программа открывает новые возможности для вас и сотрудников вашей компании, а все участники нашей Партнерской программы могут зарабатывать вместе с нами.\n
+\n
+Для всех клиентов нашего магазина действует скидка 26% на учебную литературу, методические и учебные пособия. Также мы предлагаем особые условия сотрудничества участникам Оптовой программы для родительских комитетов.\n
+\n
+Над нашими подборками, рейтингами и обзорами работают непосредственно сотрудники издательств, которые не понаслышке знают о потребностях и предпочтениях читателей.\n
+\n
+В интернет-магазине DokiDoki большое внимание уделяется сервису. Совершая покупку у нас, вы можете рассчитывать на быструю и недорогую доставку, качественную упаковку, а также оперативную помощь наших сотрудников, которые являются экспертами в книжном деле с большим опытом работы."/>
 </RelativeLayout>
