--- a/app/src/main/res/layout/fragment_reference.xml
+++ b/app/src/main/res/layout/fragment_reference.xml
@@ -5,11 +5,108 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/reference_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_marginTop="40sp"
+        android:textSize="14sp"
+        android:layout_margin="10sp"
         android:layout_centerHorizontal="true"
+        android:scrollbars="vertical"
         android:fontFamily="@font/roboto_light"
-        android:text="Справка"/>
+        android:text="Термины и определения\n
+В настоящей оферте, если из контекста не следует иное, нижеприведенные термины имеют следующие значения и являются её составной неотъемлемой частью:\n
+«Продавец» — Индивидуальный предприниматель Рябов Константин Максимович (ИНН 134543211335, ОГРН 132459547742040, место нахождения: 625000, г. Тюмень, ул.Перикопская, дом 15а), осуществляющая предпринимательскую деятельность по продаже Товара дистанционным способом.\n
+«Покупатель» — любое физическое или юридическое лицо, принявшее (акцептировавшее) настоящую оферту на нижеуказанных условиях. Для юридических лиц условия настоящей оферты применяются в части, не противоречащей специальным нормам гражданского законодательства по поставке товара.\n
+«Зарегистрированный покупатель» — Покупатель, предоставивший Продавцу свои персональные данные посредством регистрации на Сайте, которые могут быть использованы Продавцом для оформления Заказа Покупателя.\n
+«Сайт» — www.dokidokilalala.ru\n
+«Интернет-магазин» — интернет-магазин товаров Продавца, размещенный на Сайте.\n
+«Товар» — объект купли-продажи (книги, журналы, канцелярские изделия и иные аналогичные товары), предложенные к продаже посредством размещения в соответствующем разделе Интернет-магазина.\n
+«Заказ» — оформленный Покупателем в Интернет-магазине запрос на покупку и доставку Товаров, выбранных Покупателем в Интернет-магазине, и предоставленный Продавцу посредством сети Интернет (электронная форма, размещенная на Сайте) и/или оформленный Покупателем по телефону.\n
+Для целей настоящей оферты термины и определения в единственном числе относятся также и к терминам и определениям во множественном числе и наоборот.\n
+\n
+1. Общие положения\n
+1.1. В соответствии со статьей 437 Гражданского Кодекса Российской Федерации (далее — ГК РФ) данный документ является публичной офертой, адресованной Покупателям, и, в случае принятия изложенных ниже условий, Покупатель обязуется произвести оплату Товара и его доставки на условиях, изложенных в настоящей оферте, а Продавец обязуется передать товар. Договор считается заключенным на условиях, установленных в настоящей оферте и на Сайте, с момента получения продавцом сообщения о намерении покупателя приобрести товар (осуществление заказа Товара).\n
+1.2. Продавец и Покупатель гарантируют, что обладают необходимой право- и дееспособностью, а также всеми правами и полномочиями, необходимыми и достаточными для заключения и исполнения Договора розничной купли-продажи Товара.\n
+1.3. Заказывая Товары через Интернет-магазин, Покупатель безоговорочно принимает условия настоящей оферты, а также условия, указанные на Сайте.\n
+1.4. К отношениям между Покупателем и Продавцом применяются положения Гражданского Кодекса РФ (в т. ч. положение о розничной купле-продаже (глава 30, § 2)), Закон РФ «О защите прав потребителей» от 07.02.1992 г. № 2300-1, Постановление Правительства РФ от 27.09.2007 г. № 612 «Об утверждении Правил продажи товаров дистанционным способом» и иные положения действующего законодательства РФ, регламентирующие торговлю.\n
+1.5. Продавец оставляет за собой право вносить изменения в настоящую оферту, в связи с чем Покупатель обязуется самостоятельно контролировать наличие изменений в оферте, размещенной на Сайте. Уведомление об изменении настоящей оферты Продавец обязан разместить не позднее, чем за 5 (Пять) рабочих дней до даты их вступления в силу.\n
+\n
+2. Предмет Договора\n
+2.1. Продавец передает, а Покупатель принимает и оплачивает Товары на условиях настоящего Договора. Право собственности на Товар и риск случайной гибели или повреждения переходит к Покупателю в момент приемки Товара Покупателем.\n
+\n
+3. Права и обязанности сторон\n
+3.1. Продавец обязуется:\n
+С момента заключения настоящего Договора обеспечить исполнение своих обязательств перед Покупателем на условиях, установленных настоящей офертой и в соответствии с требованиями действующего законодательства РФ.\n
+\n
+3.2. Продавец имеет право:\n
+3.2.1. Изменять условия настоящей оферты; цены на Товар, указанные в Интернет-магазине; условия оплаты Товара; способы и сроки доставки Товара; а также иные условия, указанные в настоящей оферте или в Интернет-магазине.\n
+3.2.2. Без согласования с Покупателем передавать свои права и обязанности по заключенной с Покупателем сделке (Договора) третьим лицам.\n
+3.3. Покупатель обязуется:\n
+3.3.1. До момента оформления Заказа на Сайте — ознакомиться с содержанием и условиями, установленными в настоящей оферте, а также с иными условиями, указанными на Сайте, в том числе с ценами на Товар, установленными в Интернет-магазине.\n
+3.3.2. Во исполнение Продавцом своих обязательств перед Покупателем последний должен сообщить свои персональные данные, необходимые для идентификации Покупателя и достаточные для совершения сделки с Продавцом и доставки Покупателю заказанного им Товара.\n
+3.3.3. Оплатить заказанный Товар и его доставку на условиях настоящей оферты.\n
+3.3.4. Соблюдать условия, установленные в настоящей оферте, а также иные условия, указанные на Сайте.\n
+\n
+4. Регистрация в Интернет-магазине\n
+4.1. Оформить Заказ в Интернет-магазине могут зарегистрированные и незарегистрированные Покупатели. Оформление заказа незарегистрированным пользователем автоматически регистрирует пользователя на сайте.\n
+4.2. Продавец не несет ответственности за точность и правильность информации, предоставленной Покупателем при регистрации.\n
+\n
+5. Оформление и сроки выполнения заказа и Доставка товара\n
+5.1. Заказ Покупателя может быть оформлен по телефону и/или посредством заполнения электронной формы Заказа на Сайте.\n
+5.2. При оформлении Заказа по телефону или посредством электронной формы на Сайте, Покупатель тем самым подтверждает, что он ознакомлен с правилами продажи Товаров через Интернет-магазин, указанными на Сайте и в настоящей оферте, и обязуется предоставить Продавцу всю информацию, необходимую для надлежащего оформления и исполнения Заказа.\n
+5.3. При оформлении Заказа через Сайт Покупатель заполняет электронную форму Заказа и отправляет сформированный Заказ Продавцу путем подтверждения Заказа в электронной форме.\n
+5.4. Комплектация заказа и доставка до Адреса Покупателя.\n
+Комплектация происходит на складе в городе Тюмень. У каждого товара имеется свой статус наличия на складе «DokiDoki» и складах наших поставщиков и издателей.\n
+Статус «На складе» означает, что мы готовы передать товар в службу доставки в течении трех дней. Статус «Привезем для вас» и срок (например, 7-14 дней) означает, что этот товар есть у поставщика и в вышеозначенный срок мы его привезем на наш склад и передадим в службу доставки вместе с остальными товарами из вашего заказа, если такие есть. Заказ переходит в службу доставки, как только весь перечень товаров из заказа будет собран на складе, поэтому срок комплектации заказа определяется наибольшим сроком доставки товара до склада. Другими словами, если в вашей корзине 2 книги, одна из которых на складе, а другая придет через 7-14 дней, то весь заказ будет передан в службу доставки через 7-14 дней.\n
+Если вам важно получать товары с минимальной задержкой, имеет смысл разделять товары по разным заказам таким образом, чтобы товары передавались в службу доставки по мере поступления и не задерживали друг друга.\n
+Доставка осуществляется силами Продавца по адресу, указанному Покупателем при заказе Товара.\n
+Доставка Товара осуществляется ежедневно по будням с 9.00 ч до 18.00 ч. Точное время доставки согласовывается до начала Доставки по телефону Покупателя.\n
+Стоимость Доставки до адреса Покупателя составляет 100 рублей в черте города, за город доставка осуществляется согласно прайсу Продавца, размещенному в разделе сайта Доставка.\n
+Доставка оплачивается в момент оплаты товара.\n
+5.5. Самовывоз из отделов «DokiDoki» Вы можете выбрать в качестве пункта самовывоза любой магазин сети «DokiDoki» в городах России (Адреса пунктов самовывоза указаны на сайте в разделе «Контакты») .\n
+После комплектации заказа посылка доставляется до точки самовывоза за 2-3 дня. Как только заказ будет доставлен, мы свяжемся с вами, и вы сможете забрать свой заказ по выбранному ранее адресу.\n
+Также в личном кабинете вы можете отслеживать статус заказа.\n
+Готовый заказ хранится в магазине 14 дней с даты доставки в пункт самовывоза.\n
+Оплаченный, но не полученный Покупателем в течение 14 дней заказ возвращается на склад Продавца. Для определения порядка получения такого Заказа Покупатель должен связаться с Продавцом по телефону, указанному на сайте.\n
+Неоплаченный и не полученный Покупателем в течение 14 дней заказ также возвращается на склад Продавца. Договор купли-продажи в данном случае будет считаться расторгнутым, Продавец снимает с себя обязательства по передаче неполученного своевременно Заказа. Покупатель не утрачивает права на совершение нового Заказа на аналогичный Товар.\n
+Услуга самовывоза предоставляется бесплатно.\n
+5.6. Почта России Вы можете воспользоваться услугами доставки ФГУП «Почта России».\n
+Стоимость доставки зависит от веса посылки, стоимости заказа, действующих почтовых тарифов и определяется автоматически на сайте в процессе оформления заказа.\n
+Если сумма заказа не превышает 3000 рублей, вы можете выбрать оплату заказа наложенным платежом при получении посылки в отделении Почты России.\n
+Срок доставки обычно составляет от 4 дней до нескольких недель в зависимости от удаленности региона доставки и начинается с момент получения электронного уведомления.\n
+Вы можете узнать справочную информацию о сроках доставки, декларируемую Почтой РФ.\n
+Для контроля местонахождения вашей посылки воспользуйтесь формой отслеживания отправления на сайте Почты России или бесплатным телефоном 8 800 200 5888.\n
+Срок хранения заказа в почтовом отделении составляет 1 месяц с момента поступления, после чего заказ возвращается в магазин и аннулируется. В соответствии с почтовыми правилами, за хранение посылки на почте более 5 рабочих дней при получении взимается дополнительная плата.\n
+5.7. В случае возникновения у Покупателя вопросов, касающихся свойств и характеристик Товара, перед оформлением Заказа, Покупатель должен обратиться к Продавцу по телефону для получения необходимой информации.\n
+5.8. Продавец приложит все усилия для соблюдения сроков доставки Товара, установленных в настоящей оферте и/или на Сайте. Однако задержки в доставке Товара возможны ввиду непредвиденных обстоятельств, произошедших не по вине Продавца. О задержке доставки Товара Продавец уведомляет Покупателя.\n
+5.9. При получении Товара Покупатель проверяет соответствие доставленного Товара Заказу. Приемка Товара подтверждается подписью Покупателя на бланке накладной. Приемка Товара без замечаний лишает Покупателя права ссылаться на некачественностьТовара, наличие явных внешних повреждений Товара (явных производственных дефектов), несоответствие фактически поставленного Товара Заказу или сопроводительному документу.\n
+\n
+6. Оплата товара\n
+6.1. Цены на Товар определяются Продавцом в одностороннем порядке и указываются на Сайте в российских рублях. Цена Товара может быть изменена Продавцом в одностороннем порядке. При этом цена на заказанный Покупателем Товар изменению не подлежит.\n
+\n
+6.2. Предусмотрена оплата наличными при самовывозе и доставке до Покупателя.\n
+Предоставляется возможность оплатить заказ при получении на точке выдачи.\n
+Плата за доставку до точек самовывоза отделов «DokiDoki» не взимается.\n
+6.3. Оплата наличными при доставке Почтой России.\n
+Предоставляется возможность отправки посылки наложенным платежом с оплатой при получении в отделении Почты России.\n
+Стоимость доставки вычисляется автоматически при оформлении заказа.\n
+6.4. Оплата банковской картой.\n
+В точках самоывоза и при доставке в настоящий момент для принятия платежей осуществляется поддержка платежных систем VISA, MasterCard, Maestro, МИР.\n
+7. Отказ от товара\n
+7.1. Покупатель вправе отказаться от Товара надлежащего качества в любое время до его передачи, а после передачи товара — в течение 7 дней.\n
+Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид, потребительские свойства, а также документ, подтверждающий факт и условия покупки указанного товара. Отсутствие у покупателя указанного документа не лишает его возможности ссылаться на другие доказательства приобретения товара у данного продавца.\n
+При отказе покупателя от товара продавец должен возвратить ему сумму, уплаченную покупателем в соответствии с договором, за исключением расходов продавца на доставку от покупателя возвращенного товара, не позднее чем через 10 дней с даты предъявления покупателем соответствующего требования.\n
+7.2. Порядок возврата денежных средств: возврат осуществляется наличными денежными средствами или безналичным перечислением на основании заявления Покупателя.\n
+7.3. Возврат Товара Продавцу в случае отказа осуществляется в следующем порядке: Покупатель должен оформить заявление на возврат на сайте или на точках самовывоза, указанных в разделе сайта «Контакты». Заявление на возврат может быть оформлено и в адресе нахождения Продавца (г. Ижевск, 9ая Подлесная, дом 2). Товар передается Покупателем по акту приема-передачи уполномоченному представителю Продавца (в точках самовывоза — продавец, в офисе — уполномоченное лицо на основании доверенности). Возврат товара возможен только в случае сохранения товарного вида Заказа (отсутствие следов пользования, отсутствие повреждений и т.п.).\n
+\n
+8. Ответственность сторон\n
+8.1. За неисполнение или ненадлежащее исполнение условий настоящего Договора (акцептованной Покупателем оферты Продавца) Стороны несут ответственность в соответствии с законодательством Российской Федерации.\n
+8.2. Вся текстовая информация и графические изображения, размещенные в Интернет-магазине и на Сайте имеют законного правообладателя. Незаконное использование указанной информации и изображений преследуется в соответствии с действующим законодательством Российской Федерации.\n
+8.3. Продавец не несет ответственности за ущерб, причиненный Покупателю вследствие ненадлежащего использования им Товаров, приобретённых в Интернет-магазине.\n
+8.4. Продавец не отвечает за убытки Покупателя, возникшие в результате:\n
+неправильного заполнения Заказа, в т. ч. неправильного указания персональных данных;\n
+неправомерных действий третьих лиц.\n
+8.5. Покупатель несёт полную ответственность за достоверность сведений и персональных данных, указанных им при регистрации в Интернет-магазине.\n
+\n
+Copyright 2018"/>
 </RelativeLayout>
