--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -4,12 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_marginTop="40sp"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="@font/roboto_light"
-        android:text="Настройки аккаунта"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/account_image"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="20dp"
+            android:src="@drawable/image_default_user"/>
+        <TextView
+            android:id="@+id/account_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_toRightOf="@id/account_image"
+            android:text="Аноним"/>
+        <TextView
+            android:id="@+id/account_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/account_image"
+            android:layout_below="@id/account_login"
+            android:text="mail@mail.ru"/>
+        <Button
+            android:id="@+id/account_login_and_registration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/account_image"
+            android:layout_centerHorizontal="true"
+            android:text="ВОЙТИ/ЗАРЕГИСТРИРОВАТЬСЯ"/>
+    </RelativeLayout>
 </RelativeLayout>
