added switch for theme

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-    <TextView
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/settings_switch_theme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_marginTop="40sp"
         android:layout_centerHorizontal="true"
-        android:fontFamily="@font/roboto_light"
-        android:text="Настройки"/>
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="50dp"
+        android:checked="true"
+        android:clickable="false"
+        android:textOn=""
+        android:textOff=""
+        android:text="Темная тема"
+        app:showText="true"/>
 </RelativeLayout>
