--- a/app/src/main/res/layout/fragment_book_item.xml
+++ b/app/src/main/res/layout/fragment_book_item.xml
@@ -104,6 +104,7 @@
                 android:id="@+id/book_item_layout_reviews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:layout_below="@id/book_item_layout_description">
                 <TextView
                     android:id="@+id/book_item_simple_text_review"
