--- a/app/src/main/res/layout/dialog_registration.xml
+++ b/app/src/main/res/layout/dialog_registration.xml
@@ -18,6 +18,7 @@
         android:id="@+id/registration_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
