--- a/app/src/main/res/layout/fragment_book_item.xml
+++ b/app/src/main/res/layout/fragment_book_item.xml
@@ -19,13 +19,15 @@
                     android:layout_height="400dp"
                     android:layout_margin="15dp"
                     android:layout_centerHorizontal="true"/>
-                <TextView
+                <RatingBar
                     android:id="@+id/book_item_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:stepSize="1.0"
+                    android:rating="4.0"
                     android:layout_below="@id/book_item_image"
-                    android:layout_centerHorizontal="true"
-                    android:text="Рейтинг: 4,5"/>
+                    android:layout_centerHorizontal="true"/>
                 <TextView
                     android:id="@+id/book_item_name"
                     android:layout_width="wrap_content"
@@ -52,6 +54,7 @@
                 android:id="@+id/book_item_layout_genres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_below="@id/book_item_layout_book">
                 <TextView
                     android:id="@+id/book_item_simple_text_genre"
@@ -65,12 +68,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/book_item_simple_text_genre"
-                    android:layout_centerHorizontal="true"
+                    android:layout_margin="10dp"
                     android:text="ФАНТАСТИКА, ФЕНТЕЗИ, ПРИКЛЮЧЕНИЕ"/>
             </RelativeLayout>
             <RelativeLayout
                 android:id="@+id/book_item_layout_description"
                 android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/book_item_layout_genres">
                 <TextView
@@ -82,6 +86,7 @@
                     android:text="Описание книги"/>
                 <TextView
                     android:id="@+id/book_item_description"
+                    android:layout_margin="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/book_item_simple_text_description"
@@ -90,12 +95,14 @@
                     android:id="@+id/book_item_publisher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_below="@id/book_item_description"
                     android:text="Издатель: &quot;АСТ&quot;"/>
                 <TextView
                     android:id="@+id/book_item_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:layout_below="@id/book_item_publisher"
                     android:text="Год издания: 13.06.2015"/>
             </RelativeLayout>
@@ -123,6 +130,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:layout_below="@id/book_item_simple_text_review"
                     android:text="Пользователь1: Классная книга"/>
             </RelativeLayout>
