--- a/app/src/main/res/layout/fragment_store_book_item.xml
+++ b/app/src/main/res/layout/fragment_store_book_item.xml
@@ -11,16 +11,21 @@
         android:layout_height="300dp"
         android:layout_margin="15dp"
         android:layout_centerHorizontal="true"/>
+
     <RatingBar
         android:id="@+id/book_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/book_image"
-        android:numStars="5"
-        android:stepSize="1.0"
-        android:rating="4.0"
+        android:layout_centerHorizontal="true"
+        style="?android:attr/ratingBarStyleSmall"
         android:focusable="false"
-        android:layout_centerHorizontal="true"/>
+        android:isIndicator="true"
+        android:clickable="false"
+        android:numStars="5"
+        android:rating="4.0"
+        android:stepSize="1.0"
+        android:visibility="visible" />
     <TextView
         android:id="@+id/book_name"
         android:layout_width="wrap_content"
